@startuml

title __HBASE's Class Diagram__\n

  namespace gr.ds.unipi.noda.api.hbase {
    class gr.ds.unipi.noda.api.hbase.HBaseConnectionFactory {
        + closeConnection()
        + closeConnections()
        + noSqlDbOperators()
        # getBaseAggregateOperatorFactory()
        # getBaseComparisonOperatorFactory()
        # getBaseGeoSpatialOperatorFactory()
        # getBaseGeoTemporalOperatorFactory()
        # getBaseGeoTextualOperatorFactory()
        # getBaseLogicalOperatorFactory()
        # getBaseSortOperatorFactory()
        # getBaseTextualOperatorFactory()
    }
  }
  

  namespace gr.ds.unipi.noda.api.hbase {
    class gr.ds.unipi.noda.api.hbase.HBaseConnectionManager {
        {static} - INSTANCE : HBaseConnectionManager
        + closeConnection()
        + closeConnections()
        {static} + getInstance()
        - HBaseConnectionManager()
    }
  }
  

  namespace gr.ds.unipi.noda.api.hbase {
    class gr.ds.unipi.noda.api.hbase.HBaseConnector {
        - conf : Configuration
        + createConnection()
        + equals()
        + hashCode()
        {static} + newHBaseConnector()
        - HBaseConnector()
    }
  }
  

  namespace gr.ds.unipi.noda.api.hbase {
    class gr.ds.unipi.noda.api.hbase.HBaseOperators {
        - filterList : FilterList
        - projection : List<Entry<byte[], byte[]>>
        - scan : Scan
        + aggregate()
        + avg()
        + count()
        + distinct()
        + filter()
        + groupBy()
        + limit()
        + max()
        + min()
        + printScreen()
        + project()
        + sort()
        + sum()
        + toDataframe()
        {static} ~ newHBaseOperators()
        - HBaseOperators()
        - scanProjection()
    }
  }
  

  gr.ds.unipi.noda.api.hbase.HBaseConnectionFactory -up-|> gr.ds.unipi.noda.api.core.nosqldb.NoSqlConnectionFactory
  gr.ds.unipi.noda.api.hbase.HBaseConnectionManager -up-|> gr.ds.unipi.noda.api.core.nosqldb.NoSqlDbConnectionManager
  gr.ds.unipi.noda.api.hbase.HBaseConnector .up.|> gr.ds.unipi.noda.api.core.nosqldb.NoSqlDbConnector
  gr.ds.unipi.noda.api.hbase.HBaseOperators -up-|> gr.ds.unipi.noda.api.core.nosqldb.NoSqlDbOperators
  gr.ds.unipi.noda.api.hbase.HBaseOperators o-- gr.ds.unipi.noda.api.hbase.HBaseConnectionManager : hbaseConnectionManager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
